--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                 <h2 id="winner-text">Game Over!</h2>
                 <p id="game-over-reason"></p>
                 <div class="game-over-buttons">
-                    <button id="play-again-btn" class="btn btn-primary btn-large">Play Again</button>
-                    <button id="new-words-btn" class="btn btn-secondary">New Game (Different Words)</button>
+                    <button id="new-words-btn" class="btn btn-primary btn-large">New Game</button>
                 </div>
             </div>
         </div>
