bug fix new game

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
 
         <!-- Main Game Area -->
         <div id="game-area" class="game-area hidden">
+            <!-- Clue History Sidebar -->
+            <div id="clue-history-sidebar" class="clue-history-sidebar">
+                <div class="clue-history-header">
+                    <h3>📜 Past Clues</h3>
+                </div>
+                <div id="clue-history-list" class="clue-history-list">
+                    <p class="no-clues">No clues given yet</p>
+                </div>
+            </div>
+            
             <!-- Game Info Bar -->
             <div class="game-info-bar">
                 <div class="team-score red-score">
