--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
             <!-- Chat Tab Content -->
             <div id="chat-content" class="chat-content left-tab-content hidden" data-content="chat">
-                <div class="chat-channel-selector">
+                <div class="chat-channel-selector hidden">
                     <button class="chat-channel-btn active" data-channel="all">All</button>
-                    <button class="chat-channel-btn spymasters-only" data-channel="spymasters">Spymasters</button>
+                    <button class="chat-channel-btn spymasters-only hidden" data-channel="spymasters">Spymasters</button>
                 </div>
                 <div id="chat-messages" class="chat-messages">
                     <div class="chat-empty">No messages yet</div>
